<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/top_bar"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="20dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@null"
            app:tint="@color/logo_filter" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/logo"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:text="@string/description"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <Button
                android:id="@+id/system"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:drawableTop="@drawable/system"
                android:paddingVertical="20dp"
                android:tag="@string/system"
                android:text="@string/system" />

            <Button
                android:id="@+id/document"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:drawableTop="@drawable/document"
                android:paddingVertical="20dp"
                android:tag="@string/doc"
                android:text="@string/doc"
                android:textColor="#D32F2F" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container">

        <Button
            android:id="@+id/btn_recovery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:drawableTop="@drawable/ic_recovery"
            android:text="@string/clear" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>